error handling updated and player handler updated
