# src/routes/player/player.schema.js
@@ -2,12 +2,12 @@ import {z} from "zod";
 
 export const createPlayerSchema = z.object({
     name: z.string(),
-    avatar:z.string(),
-    club: z.string(),
+    // avatar:z.string(),
+    // club: z.string(),
     position: z.string(), 
-    jerseyNumber: z.number(),
-    goals: z.number(),
-    assist:z.number()
+    jerseyNumber: z.coerce.number(),
+    goals: z.coerce.number(),
+    assist:z.coerce.number()
   });
  
 export const updatePlayerSchema=createPlayerSchema;
