# src/routes/route.js
@@ -5,6 +5,7 @@ import { getClubsHandler,clubsDetailsHandler,createClubHandler,updateClubHandler
 import { createMatchesHandler, deleteMatchesHandler,addCardHandler, getMatchesHandler, matchesDetailsHandler, addGoalMatchesHandler, updateMatchesHandler } from './matches/matches.controller.js';
 import { createScheduleHandler, deleteScheduleHandler, getScheduleHandler, ScheduleDetailsHandler, updateScheduleHandler } from './schedule/schedule.controller.js';
 import { createPlayerHandler, deletePlayerHandler, getPlayerHandler, playerDetailsHandler, updatePlayerHandler } from './player/player.controller.js';
+import { getScoreboardHandler, ScoreboardDetailsHandler, createScoreboardHandler, updateScoreboardHandler, deleteScoreboardHandler, } from './scoreboard/scoreboard.controller.js';
 import { logoutHandler, registerHandler } from './auth/auth.controller.js';
 import { validateData } from '../middleware/validation.middleware.js';
 import { createClubSchema, updateClubScheme } from './club/club.schema.js';
@@ -13,6 +14,8 @@ import { createPlayerSchema, updatePlayerSchema } from './player/player.schema.j
 import { LoginSchema, RegisterSchema } from './auth/auth.schema.js';
 import swaggerUi from "swagger-ui-express"
 import { swaggerDocument } from '../utils/swagger/importjson.js';
+import { createScheduleSchema, updateScheduleSchema } from './schedule/schedule.schema.js';
+import { createScoreboardSchema, updateScoreboardSchema } from './scoreboard/scoreboard.schema.js';
 const storage = multer.memoryStorage(); 
 const upload = multer({ storage }); 
 
@@ -34,8 +37,7 @@ app.get("/auth/google/callback",passport.authenticate("google",{
 app.get('/clubs',getClubsHandler);
 app.get('/clubs/:id',clubsDetailsHandler);
 app.post('/clubs', upload.single('logo'),validateData(createClubSchema),createClubHandler)
-//TODO: after I finish CRUD on Players do this
-app.patch('/clubs/:id',validateData(updateClubScheme),updateClubHandler)
+app.patch('/clubs/:id', upload.single('logo'),validateData(updateClubScheme),updateClubHandler)
 app.delete('/clubs/:id',deleteClubHandler)
 
 app.get('/matches',getMatchesHandler)
@@ -48,14 +50,21 @@ app.post('/matches/:id/addCard',validateData(addCardSchema),addCardHandler)
 
 app.get('/schedules',getScheduleHandler)
 app.get('/schedules/:id',ScheduleDetailsHandler)
-app.post('/schedules',createScheduleHandler)
-app.patch('/schedules/:id',updateScheduleHandler)
+app.post('/schedules',validateData(createScheduleSchema),createScheduleHandler)
+app.patch('/schedules/:id',validateData(updateScheduleSchema),updateScheduleHandler)
 app.delete('/schedules/:id',deleteScheduleHandler)
+
+app.get('/scoreboard',getScoreboardHandler)
+app.get('/scoreboard/:id',ScoreboardDetailsHandler)
+app.post('/scoreboard',validateData(createScoreboardSchema),createScoreboardHandler)
+app.patch('/scoreboard/:id',validateData(updateScoreboardSchema),updateScoreboardHandler)
+app.delete('/scoreboard/:id',deleteScoreboardHandler)
+
 
 app.get('/player',getPlayerHandler);
 app.get('/player/:id',playerDetailsHandler);
-app.post('/player',validateData(createPlayerSchema),createPlayerHandler)
-app.patch('/player/:id',validateData(updatePlayerSchema),updatePlayerHandler)
+app.post('/player', upload.single('avatar'),validateData(createPlayerSchema),createPlayerHandler)
+app.patch('/player/:id', upload.single('avatar'),validateData(updatePlayerSchema),updatePlayerHandler)
 app.delete('/player/:id',deletePlayerHandler)
 
 export {app as routes}; 
